--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -11,10 +11,10 @@
                 #popup-box {
                     top:85%;
                     left:350px;
-                    height:300px;
+                    height:auto;
 
                     @media (max-width: 769px) {
-                        width: auto;
+                        width: 300px;
                         top:50%;
                         left:50%;
                         height: auto;
@@ -46,7 +46,7 @@
                                 object-fit: cover;
                                 height: auto!important;
                                 @media (max-width: 769px) {
-                                    height: auto!important;
+                                    height: 200px!important;
                                     margin-left: 0;
                                 }
                             }
