--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,5 +1,4 @@
 @import "global.scss";
-
 #footer {
     position: relative;
     .footer-container {
@@ -9,14 +8,13 @@
                     opacity: 0;
                 }
                 #popup-box {
-                    top:85%;
-                    left:350px;
-                    height:auto;
-
+                    top: 85%;
+                    left: 350px;
+                    height: auto;
                     @media (max-width: 769px) {
                         width: 300px;
-                        top:50%;
-                        left:50%;
+                        top: 50%;
+                        left: 50%;
                         height: auto;
                         border: 1px solid $grey;
                         padding-bottom: 50px;
@@ -26,22 +24,18 @@
                         right: 5px;
                     }
                     #popup-box-content {
-                        height:auto;
+                        height: auto;
                         border-top: 1px solid $grey;
                         border-right: 1px solid $grey;
-
                         @media (max-width: 769px) {
                             border: none;
                         }
-
-                        > div {
+                        >div {
                             height: auto;
                             @media (max-width: 769px) {
                                 padding-left: 0;
                                 padding-right: 0;
                             }
-                            
-
                             img {
                                 object-fit: cover;
                                 height: auto!important;
@@ -57,7 +51,6 @@
                                 padding-left: 15px;
                                 padding-right: 15px;
                             }
-
                             .description {
                                 @media (max-width: 769px) {
                                     text-align: center;
@@ -65,39 +58,34 @@
                                 p {
                                     &:first-child {
                                         font-weight: 600;
-                                        margin-bottom:5px;
+                                        margin-bottom: 5px;
                                     }
                                     &:last-child {
                                         font-size: 14px;
                                     }
                                 }
                             }
-
                             .form-group {
                                 &:nth-child(2) {
-                                    display:none;
+                                    display: none;
                                 }
-
                                 label {
                                     @media (max-width: 769px) {
                                         width: auto;
                                     }
                                 }
-
-                                > div {
+                                >div {
                                     @media (max-width: 769px) {
                                         width: 100%;
                                     }
                                 }
                             }
-
                             .btn-primary {
                                 @media (max-width: 769px) {
                                     width: 100%;
                                     margin-top: 15px;
                                     display: block!important;
                                 }
-                                
                             }
                         }
                     }
@@ -119,34 +107,23 @@
         border-top: 1px solid;
         border-bottom: 1px solid;
     }
-
     .container {
-
         .block_newsletter {
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            @media only screen and (min-device-width: 993px) and (max-device-width: 1025px)  {
-                bottom: 65px;
-            }
-
-            @media (max-width: 992px) {
-                position: relative;
-                padding-left:0;
+            @media (max-width: 768px) {
+                p {
+                    padding: 0.625em;
+                }
             }
         }
     }
-
     .row {
         .text-sm-center {
-            margin-top:50px;
-
+            margin-top: 50px;
             @media (max-width: 992px) {
-                margin-top:20px;
+                margin-top: 20px;
             }
-
             a {
-                display:block;
+                display: block;
                 text-align: center;
             }
         }
