--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -4,7 +4,15 @@
         font-size: 1.2em;
         p {
             margin: unset;
+            position: relative;
+            .filtre-sr {
+                position: relative;
+                top: -5px;
+            }
         }
+    }
+    .show-filtre {
+        display: none;
     }
     .facet {
         .facet-title {
