--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -38,7 +38,7 @@
     width: 300px;
     position: absolute;
     right: 0;
-    top: 50px;
+    top: 0;
   }
   #header .header-nav .row .header-bottom {
     width: 100%;
@@ -47,7 +47,7 @@
   }
   #header .header-nav .row .header-bottom #search_widget {
     position: absolute;
-    top: -115px;
+    top: -95px;
     right: 30%;
   }
   #header .header-nav .row #_desktop_top_menu {
@@ -114,9 +114,9 @@
     margin-left: 50px;
   }
 }
-@media (max-width: 1200px) and (max-width: 468px) {
+@media (max-width: 768px) {
   #header .header-nav .row .mobile #_mobile_logo a img {
-    margin-left: -10px;
+    margin-left: 0;
   }
 }
 @media (max-width: 1200px) {
