--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -14,6 +14,9 @@
         text-align: center;
         flex-direction: column;
         color: #FFFFFF;
+        @media (max-width: 768px) {
+            font-size: 32px;
+        }
     }
 }
 
