--- a/assets/scss/shop.scss
+++ b/assets/scss/shop.scss
@@ -28,6 +28,7 @@
                     .product-line-grid-right {
                         @media (max-width:768px) {
                             margin-top: 20px;
+                            margin-bottom: 50px;
 
                             .row {
                                 > div {
@@ -57,6 +58,11 @@
 
         .cart-grid-right {
             .cart-summary {
+                .card-block {
+                    #cart-subtotal-shipping {
+                        display: none;
+                    }
+                }
                 .cart-detailed-actions {
                     > div {
                         text-align: center;
